--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^3.1.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-router": "^4.0.6",
     "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
@@ -25,7 +26,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   },
   "eslintConfig": {
     "root": true,
