--- a/cars/package.json
+++ b/cars/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "komis",
+  "name": "cars",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,27 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/vue-fontawesome": "^2.0.2",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "chart.js": "^3.1.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
-    "vue-loader": "^15.9.6",
-    "vue-loader-v16": "^16.0.0-beta.5.4",
-    "vue-router": "^4.0.6",
-    "vue-template-compiler": "^2.6.12"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
@@ -36,7 +26,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
+      "plugin:vue/essential",
       "eslint:recommended"
     ],
     "parserOptions": {
