--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-loader": "^15.9.6",
     "vue-loader-v16": "^16.0.0-beta.5.4",
     "vue-router": "^4.0.6",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "vue3-chart-v2": "^0.8.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
